--- a/ניסיון2.HTML
+++ b/ניסיון2.HTML
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>טיטאל: הזמנות ספרים</title>
+  <title>הזמנות ספרים</title>
   <style>
     body {
       font-family: 'Alef', sans-serif;
