--- a/Lotteries.html
+++ b/Lotteries.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ספריית הילדים</title>
+  <title>הזמנות ספרים</title>
   <style>
     body {
       font-family: 'Alef', sans-serif;
@@ -98,7 +98,7 @@
   </style>
 </head>
 <body>
-  <h1>ברוכים הבאים לספריית הילדים!</h1>
+  <h1>להזמנות 👇</h1>
 
   <div class="book-list" id="bookList"></div>
 
@@ -122,7 +122,6 @@
     </div>
   </div>
 
-  <!-- טופס מודל להזמנת ספר -->
   <div class="modal" id="reserveModal">
     <div class="modal-content">
       <h3>הזמנת ספר</h3>
