--- a/Lotteries.html
+++ b/Lotteries.html
@@ -321,7 +321,7 @@
   </div>
 
   <script>
-    const passwordHash = atob("MzQyOA=="); // 3428 מוצפן
+    const passwordHash = atob("MzQyOA==");
     let books = JSON.parse(localStorage.getItem('books')) || [];
 
     function saveBooks() {
