--- a/Lotteries.html
+++ b/Lotteries.html
@@ -71,7 +71,7 @@
   <div class="container">
     <div>
       <h1>האתר בפיתוח מצטערים...</h1>
-      <p>אנא חזרו מאוחר יותר</p>
+      <p>הזכויות שמורות לא. כ. פיתוח ותכנות</p>
     </div>
   </div>
 </body>
