--- a/ניסיון2.HTML
+++ b/ניסיון2.HTML
@@ -84,7 +84,7 @@
   </div>
 
   <script>
-    const WEB_APP_URL = "YOUR_WEB_APP_URL_HERE"; // ← כאן לשים את הכתובת של הצד שרת
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwNSe3pXkIosEwRUG3xGvlRc3_dii6wfwTNofokN3k_n3-7vAcamD8DxK0Q2LJoZrQk/exec"; // ← כאן לשים את הכתובת של הצד שרת
 
     function sendData() {
       const bookName = document.getElementById('bookName').value.trim();
