--- a/newsnew.html
+++ b/newsnew.html
@@ -2,103 +2,206 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>צ'אט AI ישראלי</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>צ'אט AI - עם תגובות מותאמות</title>
   <style>
+    /* עיצוב כללי */
     body {
-      background-color: #f0f4f8;
-      font-family: 'Heebo', sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #667eea, #764ba2);
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      direction: rtl;
+      color: #333;
     }
-    .chat-bubble {
+
+    /* אזור הצ'אט */
+    #chat {
+      flex-grow: 1;
+      overflow-y: auto;
+      padding: 20px;
+      background: #fff;
+      border-radius: 12px 12px 0 0;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      margin: 20px;
+      font-size: 1.1rem;
+      line-height: 1.4;
+    }
+
+    /* הודעות */
+    .message {
+      margin: 12px 0;
       max-width: 70%;
-      padding: 10px 15px;
+      padding: 12px 16px;
       border-radius: 18px;
-      margin-bottom: 10px;
+      clear: both;
+      word-wrap: break-word;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+      transition: background-color 0.3s;
     }
-    .user-bubble {
-      background-color: #d1f5d3;
-      align-self: flex-end;
+
+    /* הודעות משתמש */
+    .user {
+      background: #a8d0ff;
+      float: left;
+      color: #1a202c;
+      text-align: left;
     }
-    .bot-bubble {
-      background-color: #e2e8f0;
-      align-self: flex-start;
+
+    /* הודעות בוט */
+    .bot {
+      background: #c6f6d5;
+      float: right;
+      color: #22543d;
+      text-align: right;
     }
+
+    /* אזור הקלט */
+    #inputArea {
+      display: flex;
+      padding: 15px 20px;
+      background: #fff;
+      box-shadow: 0 -4px 12px rgba(0,0,0,0.15);
+      border-radius: 0 0 12px 12px;
+      margin: 0 20px 20px 20px;
+    }
+
+    /* שדה הקלט */
+    #inputText {
+      flex-grow: 1;
+      padding: 14px 18px;
+      font-size: 1.1rem;
+      border: 2px solid #764ba2;
+      border-radius: 25px;
+      outline: none;
+      transition: border-color 0.3s;
+    }
+    #inputText:focus {
+      border-color: #667eea;
+      box-shadow: 0 0 6px #667eea;
+    }
+
+    /* כפתור שליחה */
+    #sendBtn {
+      padding: 0 24px;
+      margin-right: 12px;
+      font-size: 1.1rem;
+      cursor: pointer;
+      border: none;
+      background: #764ba2;
+      color: white;
+      border-radius: 25px;
+      transition: background-color 0.3s;
+      font-weight: bold;
+      user-select: none;
+    }
+    #sendBtn:hover {
+      background: #5a3680;
+    }
+
+    /* כיתוב תחתון */
+    footer {
+      text-align: center;
+      padding: 12px 0;
+      color: #ddd;
+      font-size: 0.9rem;
+      user-select: none;
+      font-weight: 600;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      letter-spacing: 0.05em;
+    }
+
   </style>
 </head>
-<body class="flex flex-col h-screen p-4">
-  <h1 class="text-2xl font-bold mb-4 text-center">🤖 צ'אט AI ישראלי</h1>
+<body>
 
-  <div id="chat" class="flex flex-col flex-grow overflow-y-auto bg-white p-4 rounded shadow-inner space-y-2"></div>
+  <div id="chat"></div>
 
-  <form id="chat-form" class="mt-4 flex">
-    <input id="prompt" type="text" class="flex-grow p-2 border rounded" placeholder="מה תרצה לשאול?" required />
-    <button type="submit" class="ml-2 px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600">שלח</button>
-  </form>
+  <div id="inputArea">
+    <input type="text" id="inputText" placeholder="כתוב כאן..." autocomplete="off" />
+    <button id="sendBtn">שלח</button>
+  </div>
 
-  <input type="file" id="fileInput" class="mt-4 text-sm" />
-  <button onclick="localStorage.removeItem('chatHistory'); location.reload();" class="mt-2 text-sm text-red-600 hover:underline">
-    🗑️ נקה שיחה
-  </button>
+  <footer>
+    כל הזכויות שמורות לאלי כ.
+  </footer>
 
   <script>
-    const chat = document.getElementById('chat');
-    const form = document.getElementById('chat-form');
-    const promptInput = document.getElementById('prompt');
-const apiKey = 'AIzaSyBXd993D827L4-VFtad7bnI7o_Kxq-_yqk';
+    const chatDiv = document.getElementById('chat');
+    const inputText = document.getElementById('inputText');
+    const sendBtn = document.getElementById('sendBtn');
 
-    let chatHistory = JSON.parse(localStorage.getItem('chatHistory') || '[]');
-
-    function loadHistory() {
-      chatHistory.forEach(msg => addMessage(msg.text, msg.sender));
-    }
-
-    function saveToHistory(text, sender) {
-      chatHistory.push({ text, sender });
-      localStorage.setItem('chatHistory', JSON.stringify(chatHistory));
-    }
+    // מפתח API - החלף לפי הצורך
+    const apiKey = "AIzaSyBXd993D827L4-VFtad7bnI7o_Kxq-_yqk";
 
     function addMessage(text, sender) {
-      const bubble = document.createElement('div');
-      bubble.className = `chat-bubble ${sender === 'user' ? 'user-bubble self-end' : 'bot-bubble self-start'}`;
-      bubble.textContent = text;
-      chat.appendChild(bubble);
-      chat.scrollTop = chat.scrollHeight;
-      saveToHistory(text, sender);
+      const msgDiv = document.createElement('div');
+      msgDiv.classList.add('message', sender);
+      msgDiv.textContent = text;
+      chatDiv.appendChild(msgDiv);
+      chatDiv.scrollTop = chatDiv.scrollHeight;
     }
 
     async function sendMessage(promptText) {
       addMessage(promptText, 'user');
-      const response = await fetch("https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=" + apiKey, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          contents: [{ role: "user", parts: [{ text: promptText }] }]
-        })
-      });
 
-      const data = await response.json();
-      const aiResponse = data.candidates?.[0]?.content?.parts?.[0]?.text || "❌ לא התקבלה תשובה מה-AI";
-      addMessage(aiResponse, 'bot');
+      const lower = promptText.toLowerCase();
+
+      if (lower.includes('מי בנה אותך') || lower.includes('מי תכנת אותך') || lower.includes('מי יצר אותך')) {
+        addMessage('אתה מדבר עם בוט שנבנה על ידי אלי כהן.', 'bot');
+        return;
+      }
+
+      if (
+        lower.includes('מה השם שלך') ||
+        lower.includes('מי אתה') ||
+        lower.includes('מי את') ||
+        lower.includes('מי אתה?') ||
+        lower.includes('מי את?')
+      ) {
+        addMessage("קוראים לי צ'אט (chat) Sbh.", 'bot');
+        return;
+      }
+
+      // כאן תוכל להוסיף קריאה אמיתית ל-API חיצוני
+      try {
+        const response = await fetch(
+          `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-pro:generateContent?key=${apiKey}`,
+          {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+              prompt: { text: promptText },
+              temperature: 0.7,
+              candidateCount: 1,
+            }),
+          }
+        );
+        const data = await response.json();
+        const aiResponse = data.candidates?.[0]?.content || "❌ לא התקבלה תשובה מה-AI";
+        addMessage(aiResponse, 'bot');
+      } catch (error) {
+        console.error(error);
+        addMessage("אירעה שגיאה בעת בקשת התשובה מהשרת.", 'bot');
+      }
     }
 
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const prompt = promptInput.value.trim();
-      if (!prompt) return;
-      promptInput.value = '';
-      await sendMessage(prompt);
+    sendBtn.addEventListener('click', () => {
+      const text = inputText.value.trim();
+      if (!text) return;
+      sendMessage(text);
+      inputText.value = '';
+      inputText.focus();
     });
 
-    document.getElementById('fileInput').addEventListener('change', async function () {
-      const file = this.files[0];
-      if (!file) return;
-      const text = await file.text();
-      promptInput.value = text.slice(0, 1000);
+    inputText.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter') {
+        sendBtn.click();
+      }
     });
-
-    window.onload = loadHistory;
   </script>
+
 </body>
 </html>
-
