--- a/newsnew.html
+++ b/newsnew.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>צ'אט AI - עם תגובות מותאמות</title>
+  <title>צ'אט Sbh</title>
   <style>
-    /* עיצוב כללי */
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(135deg, #667eea, #764ba2);
@@ -16,8 +15,6 @@
       direction: rtl;
       color: #333;
     }
-
-    /* אזור הצ'אט */
     #chat {
       flex-grow: 1;
       overflow-y: auto;
@@ -29,8 +26,6 @@
       font-size: 1.1rem;
       line-height: 1.4;
     }
-
-    /* הודעות */
     .message {
       margin: 12px 0;
       max-width: 70%;
@@ -41,24 +36,18 @@
       box-shadow: 0 1px 4px rgba(0,0,0,0.1);
       transition: background-color 0.3s;
     }
-
-    /* הודעות משתמש */
     .user {
       background: #a8d0ff;
       float: left;
       color: #1a202c;
       text-align: left;
     }
-
-    /* הודעות בוט */
     .bot {
       background: #c6f6d5;
       float: right;
       color: #22543d;
       text-align: right;
     }
-
-    /* אזור הקלט */
     #inputArea {
       display: flex;
       padding: 15px 20px;
@@ -67,8 +56,6 @@
       border-radius: 0 0 12px 12px;
       margin: 0 20px 20px 20px;
     }
-
-    /* שדה הקלט */
     #inputText {
       flex-grow: 1;
       padding: 14px 18px;
@@ -82,8 +69,6 @@
       border-color: #667eea;
       box-shadow: 0 0 6px #667eea;
     }
-
-    /* כפתור שליחה */
     #sendBtn {
       padding: 0 24px;
       margin-right: 12px;
@@ -100,8 +85,6 @@
     #sendBtn:hover {
       background: #5a3680;
     }
-
-    /* כיתוב תחתון */
     footer {
       text-align: center;
       padding: 12px 0;
@@ -112,12 +95,13 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       letter-spacing: 0.05em;
     }
-
   </style>
 </head>
 <body>
 
-  <div id="chat"></div>
+  <div id="chat">
+    <div class="message bot">ברוך הבא לצ'אט Sbh! איך אפשר לעזור?</div>
+  </div>
 
   <div id="inputArea">
     <input type="text" id="inputText" placeholder="כתוב כאן..." autocomplete="off" />
@@ -133,8 +117,7 @@
     const inputText = document.getElementById('inputText');
     const sendBtn = document.getElementById('sendBtn');
 
-    // מפתח API - החלף לפי הצורך
-    const apiKey = "AIzaSyBXd993D827L4-VFtad7bnI7o_Kxq-_yqk";
+    const apiKey = "AIzaSyBXd993D827L4-VFtad7bnI7o_Kxq-_yqk"; // ודא שה־API הזה פעיל
 
     function addMessage(text, sender) {
       const msgDiv = document.createElement('div');
@@ -150,7 +133,7 @@
       const lower = promptText.toLowerCase();
 
       if (lower.includes('מי בנה אותך') || lower.includes('מי תכנת אותך') || lower.includes('מי יצר אותך')) {
-        addMessage('אתה מדבר עם בוט שנבנה על ידי אלי כהן.', 'bot');
+        addMessage('אני נבניתי על ידי אלי כהן.', 'bot');
         return;
       }
 
@@ -161,26 +144,29 @@
         lower.includes('מי אתה?') ||
         lower.includes('מי את?')
       ) {
-        addMessage("קוראים לי צ'אט (chat) Sbh.", 'bot');
+        addMessage("קוראים לי צ'אט Sbh.", 'bot');
         return;
       }
 
-      // כאן תוכל להוסיף קריאה אמיתית ל-API חיצוני
       try {
         const response = await fetch(
-          `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-pro:generateContent?key=${apiKey}`,
+          `https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${apiKey}`,
           {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({
-              prompt: { text: promptText },
-              temperature: 0.7,
-              candidateCount: 1,
-            }),
+              contents: [
+                {
+                  parts: [{ text: promptText }],
+                  role: "user"
+                }
+              ]
+            })
           }
         );
+
         const data = await response.json();
-        const aiResponse = data.candidates?.[0]?.content || "❌ לא התקבלה תשובה מה-AI";
+        const aiResponse = data.candidates?.[0]?.content?.parts?.[0]?.text || "❌ לא התקבלה תשובה מה-AI";
         addMessage(aiResponse, 'bot');
       } catch (error) {
         console.error(error);
@@ -205,3 +191,4 @@
 
 </body>
 </html>
+
